--- a/RegisterLogin/app/src/main/res/values/strings.xml
+++ b/RegisterLogin/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Register Login</string>
+    <string name="app_name">My App</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Login</string>
     <string name="title_activity_register">Register</string>
